Add reset function

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
       </button>
       <p>Or click the text and start typing</p>
 
+      <button
+        type="button"
+        id="resetButton"
+        class="hidden border border-slate-500 p-2 rounded-lg hover:bg-slate-100 transition cursor-pointer"
+      >
+        Restart Test
+      </button>
+
       <div style="display: none">
         Test Complete! Solid run. Keep pushing to beat your high score. WPM:
         <!-- WPM -->
