--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="mx-auto max-w-7xl p-4 select-none md:p-8">
     <header class="mb-8 border-b border-neutral-700 pb-4">
-      <div class="mb-8 flex items-center justify-between">
+      <div class="mb-8 flex items-center justify-between md:mb-10">
         <img src="/public/assets/images/logo-small.svg" alt="Typing Speed Test" />
         <span class="flex items-center gap-x-2.5 text-neutral-400">
           <img src="/public/assets/images/icon-personal-best.svg" alt="" class="h-4" />
@@ -21,66 +21,65 @@
         </span>
       </div>
 
-      <div class="mb-5 grid grid-flow-col grid-cols-3">
+      <div
+        class="grid grid-flow-col grid-cols-3 divide-x divide-neutral-400 md:flex md:grid-cols-none md:items-baseline md:gap-x-6 md:pb-1"
+      >
         <span
-          class="grid gap-2 border-r border-neutral-400 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400"
+          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
         >
           WPM:
           <strong id="words-per-minute" class="text-2xl leading-none text-white">0</strong>
         </span>
         <span
-          class="grid gap-2 border-r border-neutral-400 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400"
+          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
         >
           Accuracy:
           <strong id="accuracy" class="text-2xl leading-none text-red-500">100%</strong>
         </span>
-        <span class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400">
+        <span
+          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
+        >
           Time:
           <strong id="time" class="text-2xl leading-none text-yellow-400">0:60</strong>
         </span>
       </div>
 
-      <div class="grid grid-cols-2 gap-x-2.5">
-        <div class="relative">
+      <div
+        class="my-4 grid grid-cols-2 gap-x-2.5 md:flex md:grid-cols-none md:gap-x-4 md:divide-x md:divide-neutral-700"
+      >
+        <div class="relative md:pr-4">
           <button
             type="button"
-            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px]"
+            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
           >
             <span>Difficulty</span>
             <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
           </button>
-          <fieldset id="difficulty" class="absolute z-1 mt-[7px] grid hidden w-full rounded-lg bg-neutral-800">
-            <legend class="sr-only">Difficulty</legend>
-            <label for="easy" class="cursor-pointer border-b border-neutral-700 p-2.5 leading-none tracking-[-0.48px]">
-              <input type="radio" value="easy" id="easy" name="difficulty" class="peer block h-0 appearance-none" />
+          <fieldset
+            id="difficulty"
+            class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
+          >
+            <legend class="sr-only float-left block text-gray-400 md:not-sr-only md:mr-2">Difficulty:</legend>
+            <label for="easy" class="cursor-pointer p-2.5 md:p-0">
+              <input type="radio" value="easy" id="easy" name="difficulty" class="peer sr-only" />
               <span
-                class="flex items-center gap-x-3 before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400"
+                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
               >
                 Easy
               </span>
             </label>
-            <label
-              for="medium"
-              class="cursor-pointer border-b border-neutral-700 p-2.5 leading-none tracking-[-0.48px]"
-            >
-              <input type="radio" value="medium" id="medium" name="difficulty" class="peer block h-0 appearance-none" />
+            <label for="medium" class="cursor-pointer p-2.5 md:p-0">
+              <input type="radio" value="medium" id="medium" name="difficulty" class="peer sr-only" />
               <span
-                class="flex items-center gap-x-3 before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400"
+                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
               >
                 Medium
               </span>
             </label>
-            <label for="hard" class="p-2.5 leading-none tracking-[-0.48px]">
-              <input
-                type="radio"
-                checked
-                value="hard"
-                id="hard"
-                name="difficulty"
-                class="peer block h-0 appearance-none"
-              />
+            <label for="hard" class="cursor-pointer p-2.5 md:p-0">
+              <input type="radio" checked value="hard" id="hard" name="difficulty" class="peer sr-only" />
               <span
-                class="flex items-center gap-x-3 before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400"
+                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
               >
                 Hard
               </span>
@@ -88,20 +87,20 @@
           </fieldset>
         </div>
 
-        <div class="relative">
+        <div class="relative md:pr-4">
           <button
             type="button"
-            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px]"
+            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
           >
             <span>Mode</span>
             <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
           </button>
-          <fieldset id="mode" class="absolute z-1 mt-[7px] grid hidden w-full rounded-lg bg-neutral-800">
-            <legend class="sr-only">Difficulty</legend>
-            <label
-              for="timed-mode"
-              class="cursor-pointer border-b border-neutral-700 p-2.5 leading-none tracking-[-0.48px]"
-            >
+          <fieldset
+            id="mode"
+            class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
+          >
+            <legend class="sr-only float-left mr-2 text-gray-400 md:not-sr-only md:mr-2">Mode:</legend>
+            <label for="timed-mode" class="cursor-pointer p-2.5 md:p-0">
               <input
                 type="radio"
                 checked
@@ -111,12 +110,12 @@
                 class="peer block h-0 appearance-none"
               />
               <span
-                class="flex items-center gap-x-3 before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400"
+                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
               >
                 Timed (60s)
               </span>
             </label>
-            <label for="passage-mode" class="cursor-pointer p-2.5 leading-none tracking-[-0.48px]">
+            <label for="passage-mode" class="cursor-pointer p-2.5 md:p-0">
               <input
                 type="radio"
                 value="passage"
@@ -125,7 +124,7 @@
                 class="peer block h-0 appearance-none"
               />
               <span
-                class="flex items-center gap-x-3 before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400"
+                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
               >
                 Passage
               </span>
@@ -154,7 +153,7 @@
           <button
             type="button"
             id="start-button"
-            class="cursor-pointer rounded-lg bg-blue-600 px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] transition duration-300 hover:bg-blue-400"
+            class="cursor-pointer rounded-lg bg-blue-600 px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] transition duration-300 outline-none hover:bg-blue-400 focus-visible:shadow-(--focus-shadow-lg)"
           >
             Start Typing Test
           </button>
@@ -165,10 +164,20 @@
           <button
             type="button"
             id="reset-button"
-            class="mx-auto flex cursor-pointer gap-x-2.5 rounded-lg bg-neutral-800 px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] transition duration-300 hover:bg-neutral-700"
+            class="group mx-auto flex cursor-pointer gap-x-2.5 rounded-lg bg-neutral-800 px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] transition duration-300 outline-none hover:bg-white hover:text-neutral-900 focus-visible:shadow-(--focus-shadow-lg)"
           >
             Restart Test
-            <img src="public/assets/images/icon-restart.svg" alt="" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              class="fill-white transition duration-300 group-hover:fill-neutral-900"
+            >
+              <path
+                d="M1.563 1.281h.949c.246 0 .422.211.422.457l-.07 3.446a8.6 8.6 0 0 1 7.277-3.868c4.816 0 8.718 3.938 8.718 8.72-.035 4.816-3.937 8.683-8.718 8.683a8.86 8.86 0 0 1-5.871-2.215.446.446 0 0 1 0-.633l.703-.703c.14-.14.386-.14.562 0 1.23 1.09 2.813 1.723 4.606 1.723A6.88 6.88 0 0 0 17.03 10c0-3.797-3.093-6.89-6.89-6.89-2.813 0-5.203 1.687-6.293 4.078l4.43-.106c.245 0 .456.176.456.422v.95c0 .245-.21.421-.421.421h-6.75a.406.406 0 0 1-.422-.422v-6.75c0-.21.175-.422.422-.422"
+              />
+            </svg>
           </button>
         </div>
       </div>
@@ -197,9 +206,14 @@
         <button
           type="button"
           id="restart-button"
-          class="cursor-pointer rounded-lg border border-slate-500 p-2 transition hover:bg-slate-100"
+          class="group mx-auto flex cursor-pointer gap-x-2.5 rounded-lg bg-white px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] text-neutral-900 transition duration-300 outline-none hover:opacity-90 focus-visible:shadow-(--focus-shadow-lg)"
         >
           Go Again
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="fill-neutral-900">
+            <path
+              d="M1.563 1.281h.949c.246 0 .422.211.422.457l-.07 3.446a8.6 8.6 0 0 1 7.277-3.868c4.816 0 8.718 3.938 8.718 8.72-.035 4.816-3.937 8.683-8.718 8.683a8.86 8.86 0 0 1-5.871-2.215.446.446 0 0 1 0-.633l.703-.703c.14-.14.386-.14.562 0 1.23 1.09 2.813 1.723 4.606 1.723A6.88 6.88 0 0 0 17.03 10c0-3.797-3.093-6.89-6.89-6.89-2.813 0-5.203 1.687-6.293 4.078l4.43-.106c.245 0 .456.176.456.422v.95c0 .245-.21.421-.421.421h-6.75a.406.406 0 0 1-.422-.422v-6.75c0-.21.175-.422.422-.422"
+            />
+          </svg>
         </button>
       </section>
     </main>
