--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-neutral-900 font-display text-white">
+<html lang="en" class="font-display bg-neutral-900 text-white">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,127 +9,131 @@
     <script src="src/js/main.js" defer></script>
   </head>
   <body class="mx-auto max-w-7xl p-4 select-none md:p-8">
-    <header class="mb-8 border-b border-neutral-700 pb-4">
+    <header>
       <div class="mb-8 flex items-center justify-between md:mb-10">
-        <img src="/public/assets/images/logo-small.svg" alt="Typing Speed Test" />
-        <span class="flex items-center gap-x-2.5 text-neutral-400">
-          <img src="/public/assets/images/icon-personal-best.svg" alt="" class="h-4" />
+        <picture>
+          <source srcset="/public/assets/images/logo-large.svg" media="(min-width: 48em)" type="image/svg+xml" />
+          <img src="/public/assets/images/logo-small.svg" alt="Typing Speed Test" />
+        </picture>
+        <span class="flex items-center gap-x-2.5 text-neutral-400 md:text-lg">
+          <img src="/public/assets/images/icon-personal-best.svg" alt="" class="h-4 md:h-[1.125rem]" />
           <span>
             Personal best:
             <span id="high-score" class="text-white">92</span>
           </span>
         </span>
       </div>
-
-      <div
-        class="grid grid-flow-col grid-cols-3 divide-x divide-neutral-400 md:flex md:grid-cols-none md:items-baseline md:gap-x-6 md:pb-1"
-      >
-        <span
-          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
+      <div id="settings-container" class="mb-8 border-b border-neutral-700 pb-4">
+        <div
+          class="grid grid-flow-col grid-cols-3 divide-x divide-neutral-400 md:flex md:grid-cols-none md:items-baseline md:gap-x-6 md:pb-1"
         >
-          WPM:
-          <strong id="words-per-minute" class="text-2xl leading-none text-white">0</strong>
-        </span>
-        <span
-          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
-        >
-          Accuracy:
-          <strong id="accuracy" class="text-2xl leading-none text-red-500">100%</strong>
-        </span>
-        <span
-          class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
-        >
-          Time:
-          <strong id="time" class="text-2xl leading-none text-yellow-400">0:60</strong>
-        </span>
-      </div>
-
-      <div
-        class="my-4 grid grid-cols-2 gap-x-2.5 md:flex md:grid-cols-none md:gap-x-4 md:divide-x md:divide-neutral-700"
-      >
-        <div class="relative md:pr-4">
-          <button
-            type="button"
-            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
+          <span
+            class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
           >
-            <span>Difficulty</span>
-            <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
-          </button>
-          <fieldset
-            id="difficulty"
-            class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
+            WPM:
+            <strong id="words-per-minute" class="text-2xl leading-none text-white">0</strong>
+          </span>
+          <span
+            class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
           >
-            <legend class="sr-only float-left block text-gray-400 md:not-sr-only md:mr-2">Difficulty:</legend>
-            <label for="easy" class="cursor-pointer p-2.5 md:p-0">
-              <input type="radio" value="easy" id="easy" name="difficulty" class="peer sr-only" />
-              <span
-                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
-              >
-                Easy
-              </span>
-            </label>
-            <label for="medium" class="cursor-pointer p-2.5 md:p-0">
-              <input type="radio" value="medium" id="medium" name="difficulty" class="peer sr-only" />
-              <span
-                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
-              >
-                Medium
-              </span>
-            </label>
-            <label for="hard" class="cursor-pointer p-2.5 md:p-0">
-              <input type="radio" checked value="hard" id="hard" name="difficulty" class="peer sr-only" />
-              <span
-                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
-              >
-                Hard
-              </span>
-            </label>
-          </fieldset>
+            Accuracy:
+            <strong id="accuracy" class="text-2xl leading-none text-white">100%</strong>
+          </span>
+          <span
+            class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
+          >
+            Time:
+            <strong id="time" class="text-2xl leading-none text-white">0:60</strong>
+          </span>
         </div>
 
-        <div class="relative md:pr-4">
-          <button
-            type="button"
-            class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
-          >
-            <span>Mode</span>
-            <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
-          </button>
-          <fieldset
-            id="mode"
-            class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
-          >
-            <legend class="sr-only float-left mr-2 text-gray-400 md:not-sr-only md:mr-2">Mode:</legend>
-            <label for="timed-mode" class="cursor-pointer p-2.5 md:p-0">
-              <input
-                type="radio"
-                checked
-                value="timed"
-                id="timed-mode"
-                name="mode"
-                class="peer block h-0 appearance-none"
-              />
-              <span
-                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
-              >
-                Timed (60s)
-              </span>
-            </label>
-            <label for="passage-mode" class="cursor-pointer p-2.5 md:p-0">
-              <input
-                type="radio"
-                value="passage"
-                id="passage-mode"
-                name="mode"
-                class="peer block h-0 appearance-none"
-              />
-              <span
-                class="flex items-center gap-x-3 transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:rounded-lg md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
-              >
-                Passage
-              </span>
-            </label>
-          </fieldset>
+        <div
+          class="my-4 grid grid-cols-2 gap-x-2.5 md:flex md:grid-cols-none md:gap-x-4 md:divide-x md:divide-neutral-700"
+        >
+          <div class="relative md:pr-4">
+            <button
+              type="button"
+              class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
+            >
+              <span>Difficulty</span>
+              <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
+            </button>
+            <fieldset
+              id="difficulty"
+              class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
+            >
+              <legend class="sr-only float-left block text-gray-400 md:not-sr-only md:mr-2">Difficulty:</legend>
+              <label for="easy" class="cursor-pointer p-2.5 md:p-0">
+                <input type="radio" value="easy" id="easy" name="difficulty" class="peer sr-only" />
+                <span
+                  class="flex items-center gap-x-3 rounded-lg transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
+                >
+                  Easy
+                </span>
+              </label>
+              <label for="medium" class="cursor-pointer p-2.5 md:p-0">
+                <input type="radio" value="medium" id="medium" name="difficulty" class="peer sr-only" />
+                <span
+                  class="flex items-center gap-x-3 rounded-lg transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
+                >
+                  Medium
+                </span>
+              </label>
+              <label for="hard" class="cursor-pointer p-2.5 md:p-0">
+                <input type="radio" checked value="hard" id="hard" name="difficulty" class="peer sr-only" />
+                <span
+                  class="flex items-center gap-x-3 rounded-lg transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
+                >
+                  Hard
+                </span>
+              </label>
+            </fieldset>
+          </div>
+
+          <div class="relative md:pr-4">
+            <button
+              type="button"
+              class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
+            >
+              <span>Mode</span>
+              <img src="public/assets/images/icon-down-arrow.svg" alt="" class="w-2.5" />
+            </button>
+            <fieldset
+              id="mode"
+              class="absolute z-1 mt-[7px] grid hidden w-full items-center divide-y divide-neutral-700 rounded-lg bg-neutral-800 leading-none tracking-[-0.48px] md:relative md:m-0 md:flex md:gap-x-1.5 md:divide-y-0 md:bg-transparent"
+            >
+              <legend class="sr-only float-left mr-2 text-gray-400 md:not-sr-only md:mr-2">Mode:</legend>
+              <label for="timed-mode" class="cursor-pointer p-2.5 md:p-0">
+                <input
+                  type="radio"
+                  checked
+                  value="timed"
+                  id="timed-mode"
+                  name="mode"
+                  class="peer block h-0 appearance-none"
+                />
+                <span
+                  class="flex items-center gap-x-3 rounded-lg transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
+                >
+                  Timed (60s)
+                </span>
+              </label>
+              <label for="passage-mode" class="cursor-pointer p-2.5 md:p-0">
+                <input
+                  type="radio"
+                  value="passage"
+                  id="passage-mode"
+                  name="mode"
+                  class="peer block h-0 appearance-none"
+                />
+                <span
+                  class="flex items-center gap-x-3 rounded-lg transition duration-300 peer-focus-visible:shadow-(--focus-shadow) before:ml-0.5 before:block before:h-4 before:w-4 before:rounded-full before:border before:border-white before:content-[''] peer-checked:before:border-4 peer-checked:before:border-blue-400 md:border md:border-b-neutral-400 md:px-2.5 md:py-1.5 md:peer-checked:border-blue-400 md:peer-checked:text-blue-400 md:before:hidden hover:md:border-blue-400 md:hover:text-blue-400"
+                >
+                  Passage
+                </span>
+              </label>
+            </fieldset>
+          </div>
         </div>
       </div>
     </header>
@@ -182,31 +186,54 @@
         </div>
       </div>
 
-      <section id="test-complete" class="hidden">
-        <h1>Test Complete!</h1>
-        <p>Solid run. Keep pushing to beat your high score.</p>
+      <section id="test-complete" class="hidden pt-4">
+        <div class="relative mb-6">
+          <img src="public/assets/images/pattern-star-2.svg" alt="" class="absolute bottom-0 left-0 w-5 md:w-8" />
+          <img
+            src="public/assets/images/icon-completed.svg"
+            alt=""
+            class="mx-auto h-12 w-12 rounded-full shadow-(--icon-shadow) md:h-16 md:w-16 md:shadow-(--icon-shadow-lg)"
+          />
+        </div>
 
-        <span>
-          WPM:
-          <span id="final-words-per-minute">0</span>
-        </span>
+        <div class="mb-6 grid gap-y-2.5 text-center leading-[1.2]">
+          <h1 class="mt-4 text-2xl leading-[1.36] font-bold tracking-[-0.32px] md:text-[2.5rem] md:tracking-[0.4px]">
+            Test Complete!
+          </h1>
+          <p class="leading-[1.2] tracking-[-0.6px] tracking-[-0.48px] text-neutral-400 md:text-xl">
+            Solid run. Keep pushing to beat your high score.
+          </p>
+        </div>
 
-        <span>
-          Accuracy:
-          <span id="final-accuracy">100%</span>
-        </span>
-
-        <span>
-          Characters:
-          <span id="final-correct"></span>
-          /
-          <span id="final-errors"></span>
-        </span>
+        <div class="grid gap-x-5 gap-y-4 md:my-5 md:grid-cols-3 lg:flex lg:justify-center">
+          <span
+            class="grid gap-y-3 rounded-lg border border-neutral-700 px-6 py-4 text-xl leading-[1.2] text-neutral-400 lg:w-40"
+          >
+            WPM:
+            <span id="final-words-per-minute" class="text-2xl leading-none font-bold text-white">0</span>
+          </span>
+          <span
+            class="grid gap-y-3 rounded-lg border border-neutral-700 px-6 py-4 text-xl leading-[1.2] text-neutral-400 lg:w-40"
+          >
+            Accuracy:
+            <span id="final-accuracy" class="text-2xl leading-none font-bold text-red-400">100%</span>
+          </span>
+          <span
+            class="grid gap-y-3 rounded-lg border border-neutral-700 px-6 py-4 text-xl leading-[1.2] text-neutral-400 lg:w-40"
+          >
+            Characters:
+            <span class="flex text-2xl leading-none font-bold">
+              <span id="final-correct" class="text-green-500"></span>
+              /
+              <span id="final-errors" class="text-red-500"></span>
+            </span>
+          </span>
+        </div>
 
         <button
           type="button"
           id="restart-button"
-          class="group mx-auto flex cursor-pointer gap-x-2.5 rounded-lg bg-white px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] text-neutral-900 transition duration-300 outline-none hover:opacity-90 focus-visible:shadow-(--focus-shadow-lg)"
+          class="group mx-auto mt-10 flex cursor-pointer gap-x-2.5 rounded-lg bg-white px-6 py-4 text-xl leading-[1.2] font-semibold tracking-[-0.3px] text-neutral-900 transition duration-300 outline-none hover:opacity-90 focus-visible:shadow-(--focus-shadow-lg)"
         >
           Go Again
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" class="fill-neutral-900">
@@ -215,6 +242,11 @@
             />
           </svg>
         </button>
+        <img
+          src="public/assets/images/pattern-star-1.svg"
+          alt=""
+          class="md: my-10 mr-4 ml-auto h-10 w-10 md:m-0 md:ml-auto md:h-20 md:w-20"
+        />
       </section>
     </main>
   </body>
