Adjust wpm and highscore calculation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="/public/assets/images/icon-personal-best.svg" alt="" class="h-4 md:h-[1.125rem]" />
           <span>
             Personal best:
-            <span id="high-score" class="text-white">92</span>
+            <span id="high-score" class="text-white">– WPM</span>
           </span>
         </span>
       </div>
