--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div id="game-container" class="relative">
         <section
           id="passage"
-          class="cursor-pointer text-[2rem] leading-[1.36] tracking-[-0.4px] text-neutral-400 opacity-40 blur-[6px]"
+          class="cursor-pointer text-[2rem] leading-[1.36] tracking-[-0.4px] text-neutral-400 opacity-40 blur-[6px] md:text-[2.5rem]"
         ></section>
 
         <div>
