--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="public/assets/vendor/confetti.min.js"></script>
   </head>
   <body class="mx-auto max-w-7xl p-4 select-none md:p-8">
-    <header>
-      <div class="mb-8 flex items-center justify-between md:mb-10">
+    <header class="overflow-auto">
+      <div class="mb-8 flex items-center justify-between md:mb-10 xl:mb-16">
         <picture>
           <source srcset="public/assets/images/logo-large.svg" media="(min-width: 48em)" type="image/svg+xml" />
           <img src="public/assets/images/logo-small.svg" alt="Typing Speed Test" />
@@ -24,9 +24,12 @@
           </span>
         </span>
       </div>
-      <div id="settings-container" class="mb-8 border-b border-neutral-700 pb-4">
+      <div
+        id="settings-container"
+        class="mb-8 border-b border-neutral-700 pb-4 xl:flex xl:items-center xl:justify-between"
+      >
         <div
-          class="grid grid-flow-col grid-cols-3 divide-x divide-neutral-400 md:flex md:grid-cols-none md:items-baseline md:gap-x-6 md:pb-1"
+          class="grid grid-flow-col grid-cols-3 divide-x divide-neutral-700 md:flex md:grid-cols-none md:items-baseline md:gap-x-6 md:pb-1"
         >
           <span
             class="grid gap-2 text-center leading-[1.2] tracking-[-0.48px] text-neutral-400 md:flex md:items-center md:pr-6 md:text-xl md:tracking-[-0.6px]"
@@ -49,7 +52,7 @@
         </div>
 
         <div
-          class="my-4 grid grid-cols-2 gap-x-2.5 md:flex md:grid-cols-none md:gap-x-4 md:divide-x md:divide-neutral-700"
+          class="my-4 grid grid-cols-2 gap-x-2.5 md:flex md:grid-cols-none md:gap-x-4 md:divide-x md:divide-neutral-700 xl:m-0"
         >
           <div class="relative md:pr-4">
             <button
@@ -91,7 +94,7 @@
             </fieldset>
           </div>
 
-          <div class="relative md:pr-4">
+          <div class="relative">
             <button
               type="button"
               class="toggle-button flex w-full cursor-pointer justify-center gap-x-2.5 rounded-md border border-neutral-500 px-2.5 py-1.5 text-center leading-[1.2] tracking-[-0.48px] outline-none focus-visible:shadow-(--focus-shadow) md:hidden"
@@ -143,7 +146,7 @@
       <div id="game-container" class="relative">
         <section
           id="passage"
-          class="cursor-pointer text-[2rem] leading-[1.36] tracking-[-0.4px] text-neutral-400 opacity-40 blur-[6px] md:text-[2.5rem]"
+          class="cursor-pointer text-[2rem] leading-[1.36] tracking-[-0.4px] whitespace-break-spaces text-neutral-400 opacity-40 blur-[6px] md:text-[2.5rem]"
         ></section>
 
         <div>
@@ -153,7 +156,7 @@
 
         <div
           id="start-button-container"
-          class="absolute top-[50%] left-[50%] w-full translate-x-[-50%] translate-y-[-50%] text-center"
+          class="absolute top-40 left-[50%] w-full translate-x-[-50%] translate-y-[-50%] text-center md:top-[50%]"
         >
           <button
             type="button"
@@ -187,8 +190,8 @@
         </div>
       </div>
 
-      <section id="test-complete" class="hidden pt-4">
-        <div class="relative mb-6">
+      <section id="test-complete" class="hidden md:mt-10 xl:mt-0">
+        <div class="relative mb-6 flex h-20 items-center justify-center md:mb-0 md:h-32">
           <img src="public/assets/images/pattern-star-2.svg" alt="" class="absolute bottom-0 left-0 w-5 md:w-8" />
           <img
             id="success-icon"
@@ -198,7 +201,7 @@
           />
         </div>
 
-        <div id="success-message" class="mb-6 grid gap-y-2.5 text-center leading-[1.2]">
+        <div id="success-message" class="mb-6 grid gap-y-2.5 text-center leading-[1.2] md:pb-6">
           <h1 class="mt-4 text-2xl leading-[1.36] font-bold tracking-[-0.32px] md:text-[2.5rem] md:tracking-[0.4px]">
             Test Complete!
           </h1>
@@ -218,7 +221,7 @@
             class="grid gap-y-3 rounded-lg border border-neutral-700 px-6 py-4 text-xl leading-[1.2] text-neutral-400 lg:w-40"
           >
             Accuracy:
-            <span id="final-accuracy" class="text-2xl leading-none font-bold text-red-400">100%</span>
+            <span id="final-accuracy" class="text-2xl leading-none font-bold">100%</span>
           </span>
           <span
             class="grid gap-y-3 rounded-lg border border-neutral-700 px-6 py-4 text-xl leading-[1.2] text-neutral-400 lg:w-40"
