--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <input
               type="text"
               id="user-input"
-              class="fixed top-0 left-0 z-1 h-[50vh] w-full !border-2 !border-red-500 text-transparent"
+              class="sr-only top-0 left-0 z-1 h-screen w-full text-transparent"
               tabindex="-1"
             />
           </div>
