--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <input
               type="text"
               id="user-input"
-              class="sr-only fixed top-0 left-0 z-1 h-screen w-full text-transparent"
+              class="sr-only absolute top-0 left-0 z-1 h-screen w-full text-transparent"
               tabindex="-1"
             />
           </div>
